Add detail section for each pin:

--- a/client/asset/sass/style.min.scss
+++ b/client/asset/sass/style.min.scss
@@ -11,3 +11,5 @@
 @import 'component/_form.scss';
 @import 'component/_navbar.scss';
 @import 'component/_map.scss';
+
+@import 'page/_dashboard.scss';
