Create template script for delete & save pin

--- a/client/asset/sass/style.min.scss
+++ b/client/asset/sass/style.min.scss
@@ -11,5 +11,6 @@
 @import 'component/_form.scss';
 @import 'component/_navbar.scss';
 @import 'component/_map.scss';
+@import 'component/_modal.scss';
 
 @import 'page/_dashboard.scss';
