Add calendar to pin dashboard

--- a/client/asset/sass/style.min.scss
+++ b/client/asset/sass/style.min.scss
@@ -12,5 +12,6 @@
 @import 'component/_navbar.scss';
 @import 'component/_map.scss';
 @import 'component/_modal.scss';
+@import 'component/_datepicker.scss';
 
 @import 'page/_dashboard.scss';
