--- a/client/asset/sass/page/_dashboard.scss
+++ b/client/asset/sass/page/_dashboard.scss
@@ -1,4 +1,25 @@
 #page-dashboard{
+	#dashboard-loading{
+		background: $color-main-4;
+		color: $color-shade-1;
+		.wrapper-outer{
+			display: table;
+			width: 100%;
+			height: 100%;
+			.wrapper-inner{
+				display: table-cell;
+				text-align: center;
+				vertical-align: middle;
+			}
+		}
+		.circle-wrapper{
+			background: $color-main-3;
+			border-radius: 100%;
+			display: inline-block;
+			width: 250px;
+			height: 250px;
+		}
+	}
 	.navbar{
 		margin: 0px;
 	}
