Add landing page

--- a/client/asset/sass/style.min.scss
+++ b/client/asset/sass/style.min.scss
@@ -14,5 +14,6 @@
 @import 'component/_modal.scss';
 @import 'component/_datepicker.scss';
 
+@import 'page/_landing.scss';
 @import 'page/_map.dashboard.scss';
 @import 'page/_map.list.scss';
