Redesign page signin

--- a/client/asset/sass/style.min.scss
+++ b/client/asset/sass/style.min.scss
@@ -11,9 +11,11 @@
 @import 'component/_form.scss';
 @import 'component/_navbar.scss';
 @import 'component/_map.scss';
+@import 'component/_alert.scss';
 @import 'component/_modal.scss';
 @import 'component/_datepicker.scss';
 
 @import 'page/_landing.scss';
 @import 'page/_map.dashboard.scss';
 @import 'page/_map.list.scss';
+@import 'page/_signin.scss';
