--- a/client/asset/sass/page/_signin.scss
+++ b/client/asset/sass/page/_signin.scss
@@ -5,25 +5,18 @@
 			position: relative;
 			width: 50%;
 			height: 100%;
-			// .separate-action{
-			// 	background: $color-shade-1;
-			// 	padding: 2px;
-			// 	position: absolute;
-			// 	top: 0px;
-			// 	width: 100%;
-			// 	height: 50px;
-			// 	.action-wrapper{
-			// 		background: $color-main-1;
-			// 		display: block;
-			// 		height: 46px;
-			// 	}
-			// }
 		}
 		.content-box{
 			border-right: 0px;
 			margin: 50px;
 			margin-right: 0px;
-			padding: 30px;
+			position: relative;
+			.content-header{
+				padding: 20px 30px;
+			}
+			.content-body{
+				padding: 20px 30px;
+			}
 			form{
 				.form-action{
 					font-size: 13px;
@@ -36,7 +29,14 @@
 				background: $color-main-3;
 			}
 			.content-box{
-				background: $color-shade-1;
+				.content-header{
+					background: $color-main-1;
+					border-top: 2px solid $color-shade-1;
+					color: $color-shade-1;
+				}
+				.content-body{
+					background: $color-shade-1;
+				}
 			}
 		}
 		&.white{
@@ -48,7 +48,14 @@
 				background: $color-main-5;
 			}
 			.content-box{
-				background: $color-main-1;
+				.content-header{
+					background: $color-shade-1;
+					border-top: 2px solid $color-main-1;
+					color: $color-main-1;
+				}
+				.content-body{
+					background: $color-main-1;
+				}
 			}
 		}
 	}
