--- a/client/asset/sass/page/_landing.scss
+++ b/client/asset/sass/page/_landing.scss
@@ -22,6 +22,7 @@
 		margin-top: -40px;
 		position: relative;
 		.content-action{
+			background: $color-main-3;
 			padding: 20px 0px;
 		}
 		.content-wrapper{
