Fix Page Landing css, Page SignIn, Register, Forget Pass skeleton

--- a/client/asset/sass/page/_landing.scss
+++ b/client/asset/sass/page/_landing.scss
@@ -23,6 +23,7 @@
 		position: relative;
 		.content-action{
 			background: $color-main-3;
+			color: $color-shade-1;
 			padding: 20px 0px;
 		}
 		.content-wrapper{
